Add Vite to fix the web page not showing up, button progress still needs to be made

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Double Spend Problem Simulator</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- Chart.js -->
+    <link rel="stylesheet" href="/src/styles/main.css">
+    <!-- Load dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- D3.js -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="components/App.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
