--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Load dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
 </head>
 <body>
     <div id="app"></div>
